# IMU_demonstration

IMUReader/: settings.gradle
IMUReader/app/: build.gradle
IMUReader/app/src/androidTest/java/com/imu/reader/imureader/: ExampleInstrumentedTest.java
IMUReader/app/src/main/: AndroidManifest.xml
IMUReader/app/src/main/java/com/imu/reader/imureader/: FindDeviceActivity.java  FirstFragment.java  MainActivity.java  SecondFragment.java
IMUReader/app/src/main/java/com/imu/reader/imureader/BLE/: IMUGattCallback.java
IMUReader/app/src/main/res/drawable/: ic_launcher_foreground.xml
IMUReader/app/src/main/res/layout/: fragment_first.xml  fragment_second.xml
IMUReader/app/src/main/res/menu/: menu_main.xml
IMUReader/app/src/main/res/navigation/: nav_graph.xml
IMUReader/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
IMUReader/app/src/main/res/values-night/: themes.xml
IMUReader/app/src/main/res/values-v23/: themes.xml
IMUReader/app/src/test/java/com/imu/reader/imureader/: ExampleUnitTest.java
IMUReader/gradle/wrapper/: gradle-wrapper.properties
rp2040/: CMakeLists.txt  MPU_6050_GATT.gatt  btstack_config.h  gatt_service.c  gatt_service.h  main.c
rp2040/vendors/: CMakeLists.txt
